--- a/src/home/styles/OrderDetails.css
+++ b/src/home/styles/OrderDetails.css
@@ -6,17 +6,9 @@
   display: flex;
   justify-content: space-between;
   padding: 0 0.2rem;
+  align-items: center;
 }
 
 .orderDetailsHeaderLeft {
-  font-weight: 500;
-}
-
-.orderDetailsHeaderRight {
-  color: white;
-  background-color: red;
-  padding: 0.2rem 0.3rem;
-  border-radius: 10rem;
-  letter-spacing: 0.1rem;
   font-weight: 500;
 }
